# mmai-845-rl-portfolio

./: .gitignore  README.md  RESET_EXAMPLE_PROFILE.bat  START_DASHBOARD.bat  a4_windy_gridworld_v2.ipynb  pyproject.toml  requirements.txt
a2/: mountain_climbing_deenu_gengiti.py
a4/: tabular_deenu_gengiti.py
archive/a4/: a4_windy_gridworld.ipynb  a4_windy_gridworld_v2.ipynb  main_deenu_gengiti.py  windy_gridworld_deenu_gengiti.py
docs/: EXPERIMENT_ENVIRONMENT_AND_DECISIONS.md  INSTALL_AND_RUN.md  INTERIM_REPORT_DRAFT.md  KEY_DECISIONS_SUMMARY.md  LESSONS_LEARNED_BY_PHASE.md  PACKAGE_CONTENTS.md  PHASE_4_PRODUCT_APP.md  PROJECT_JOURNEY_PHASE_0_TO_4.md  README_FIRST.md  ROADMAP_DECISION_NOTES.md  START_HERE_IF_YOU_KNOW_NOTHING.md  TEACHER_RUN_GUIDE.md  TEAM_HANDOFF_NOTES.md  TROUBLESHOOTING.md  WHAT_EACH_FOLDER_IS_FOR.md  phase_04_report.md
docs/phase_reports/: phase_00_report.md  phase_01_report.md  phase_02_closure_note.md  phase_02_report.md  phase_03_closure_note.md  phase_03_report.md
docs/presentation_handoff/: PPT_TEMPLATE_9_SLIDES.md  PRESENTATION_NOTES.md  README.md  SLIDE_ASSET_INDEX.md  SLIDE_DECISION_SCRIPTS.md
docs/project_docs/: PHASE_0_DATA_CONTRACT.md  PHASE_0_ENVIRONMENT_SPEC.md  PHASE_0_IMPLEMENTATION_SEQUENCE.md  PHASE_0_TECHNICAL_SPEC.md  PHASE_2_3_SYMBOL_UNIVERSE.md  PHASE_2_MAINLINE_UPGRADE_PROPOSAL.md  PHASE_2_REQUIREMENTS.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_REQUIREMENTS.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_4_REQUIREMENTS.md  PHASE_DEVELOPMENT_FRAMEWORK.md  ROADMAP_DEVIATIONS.md  ROADMAP_v2.md
scripts/: export_phase_4_paper_trading.py  run_product_dashboard.py  seed_example_profiles.py
src/rl_portfolio/: __init__.py  (+11 more)
(+24 files in other folders)
